--- a/com.luizalabs.web/.settings/org.eclipse.wst.common.component
+++ b/com.luizalabs.web/.settings/org.eclipse.wst.common.component
@@ -4,12 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="com.luizalabs.core.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.luizalabs.core/com.luizalabs.core">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="com.luizalabs.domain.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.luizalabs.domain/com.luizalabs.domain">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src-test"/>
         <property name="context-root" value="com.luizalabs.web"/>
         <property name="java-output-path" value="/com.luizalabs.web/target/classes"/>
     </wb-module>
